load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

alias(
    name = "config",
    actual = select(
        {
            "x86_64-linux": "x86_64-linux-gnu/config.h",
        },
        no_match_error = "No pre-configured `config.h` available",
    ),
    visibility = ["//:__subpackages__"],
)
